draft backup, ready for rpi

--- a/egs/smarthome/backend/config.cfg
+++ b/egs/smarthome/backend/config.cfg
@@ -41,21 +41,29 @@ project :
     temperature : 
       {
         dim : 2
+        y_min : 10
+        y_max : 30
         sensors : ['ds18b20_01', 'bme280_01']
       }
     humidity : 
       {
         dim : 2
+        y_min : 0
+        y_max : 100
         sensors : ['dht11_01']
       }
     illuminance :
       {
         dim : 2
+        y_min : 0
+        y_max : 600
         sensors : ['tsl2591_01']
       }
     pressure :
       {
         dim : 2
+        y_min : 900
+        y_max : 1050
         sensors : ['bme280_01']
       }
     motion :
@@ -79,6 +87,8 @@ project :
     temperature : 
       {
         dim : 2
+        y_min : -15
+        y_max : 30
         sensors : ['ds18b20_02']
       }
   }
