--- a/iotenv.yml
+++ b/iotenv.yml
@@ -4,8 +4,8 @@ channels:
 dependencies:
   - python=3.8
   - ipykernel
-  - paho-mqtt
-  - pyyaml
-  - python-box
-  - pymongo
+  - paho-mqtt=1.5.1
+  - pyyaml=5.3.1
+  - python-box=5.2.0
+  - pymongo=2.4.2
 prefix: /Users/kitt/miniconda3/envs/iot
