changed path of chromedrive and moved to the config file

--- a/egs/voicehome/backend/config.yml
+++ b/egs/voicehome/backend/config.yml
@@ -23,5 +23,9 @@ mongo:
 
 # --- Socket control interface configuration --- #
 socket:
-  host: "147.228.124.230"
+  #  host: "127.0.0.1"        #mac
+  host: "147.228.124.230"  #raspberry
   port: 7107
+chromedriver:
+#  path: '/usr/local/bin/chromedriver' #mac
+  path: '/usr/bin/chromedriver'       #linux
