--- a/egs/smartblinds/gui/package.json
+++ b/egs/smartblinds/gui/package.json
@@ -15,8 +15,12 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@mui/material": "^5.1.0",
+    "@types/js-yaml": "^4.0.5",
+    "@types/promise-fs": "^2.1.2",
     "cross-env": "^7.0.2",
+    "js-yaml": "^4.1.0",
     "next": "11.1.2",
+    "promise-fs": "^2.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router": "^6.0.2",
