--- a/egs/smartblinds/engine/task.yaml
+++ b/egs/smartblinds/engine/task.yaml
@@ -85,3 +85,13 @@ targets:
     min: 0
     max: 100
     description: 'desc'
+classifiers:
+  - name: 'ifelse'
+    description: 'A default (baseline) decision maker. Based on if-else statements.'
+    dataTraining: []
+  - name: 'ffnn'
+    description: 'A Feed-Forward Neural Network based decision maker.'
+    dataTraining: []
+  - name: 'lstm'
+    description: 'A Recurrent (LSTM) Neural Network based decision maker.'
+    dataTraining: []
