--- a/egs/smartblinds/engine/task.yaml
+++ b/egs/smartblinds/engine/task.yaml
@@ -89,12 +89,18 @@ classifiers:
   - name: 'ifelse'
     description: 'A default (baseline) decision maker. Based on if-else statements.'
     dataTraining: []
+    retrained: 'never'
+    trainTime: '/'
     state: {}
   - name: 'ffnn'
     description: 'A Feed-Forward Neural Network based decision maker.'
     dataTraining: []
+    retrained: ''
+    trainTime: ''
     state: {}
   - name: 'lstm'
     description: 'A Recurrent (LSTM) Neural Network based decision maker.'
     dataTraining: []
+    retrained: ''
+    trainTime: ''
     state: {}
