--- a/egs/smartblinds/engine/task.yaml
+++ b/egs/smartblinds/engine/task.yaml
@@ -29,86 +29,103 @@ features:
   min: 1
   name: year_day
   type: int
+  icon: calendar_view_month
 - description: desc
   max: 6
   min: 0
   name: week_day
   type: int
+  icon: calendar_view_week
 - description: desc
   max: 86400
   min: 0
   name: day_secs
   type: int
+  icon: calendar_view_day
 - description: desc
   max: null
   min: null
   name: home
   type: boolean
+  icon: cottage
 - description: desc
   max: 50
   min: -30
   name: temp_in
   type: float
+  icon: thermostat
 - description: desc
   max: 50
   min: -30
   name: temp_out
   type: float
+  icon: thermostat_auto
 - description: desc
   max: 10000
   min: 0
   name: lum_in
   type: float
+  icon: lightbulb
 - description: desc
   max: 10000
   min: 0
   name: lum_out
   type: float
+  icon: light_mode
 - description: desc
   max: 50
   min: -30
   name: owm_temp_max
   type: float
+  icon: looks
 - description: desc
   max: 50
   min: -30
   name: owm_temp_1h
   type: float
+  icon: looks_one
 - description: desc
   max: 50
   min: -30
   name: owm_temp_2h
   type: float
+  icon: looks_two
 - description: desc
   max: 50
   min: -30
   name: owm_temp_3h
   type: float
+  icon: looks_3
 - description: desc
   max: 804
   min: 200
   name: owm_code
   type: int
+  icon: integration_instructions
 - description: desc
   max: 50
   min: 0
   name: owm_wind_speed
   type: float
+  icon: speed
 - description: desc
   max: 359
   min: 0
   name: owm_wind_heading
   type: float
+  icon: directions
 targets:
 - description: desc
   max: 100
   min: 0
   name: position
   type: int
+  icon: video_label
 - description: desc
   max: 100
   min: 0
   name: tilt
   type: int
+  icon: screen_rotation
 taskInfo:
   nextTraining: 1639522800.0
