--- a/egs/smartblinds/gui/package.json
+++ b/egs/smartblinds/gui/package.json
@@ -18,6 +18,7 @@
     "@types/js-yaml": "^4.0.5",
     "@types/promise-fs": "^2.1.2",
     "cross-env": "^7.0.2",
+    "echarts-for-react-typescript": "^1.2.5",
     "js-yaml": "^4.1.0",
     "next": "11.1.2",
     "promise-fs": "^2.1.1",
