--- a/egs/smartblinds/engine/task.yaml
+++ b/egs/smartblinds/engine/task.yaml
@@ -30,90 +30,105 @@ features:
   name: year_day
   type: int
   icon: calendar_view_month
+  show: false
 - description: desc
   max: 6
   min: 0
   name: week_day
   type: int
   icon: calendar_view_week
+  show: false
 - description: desc
   max: 86400
   min: 0
   name: day_secs
   type: int
   icon: calendar_view_day
+  show: true
 - description: desc
   max: null
   min: null
   name: home
   type: boolean
   icon: cottage
+  show: true
 - description: desc
   max: 50
   min: -30
   name: temp_in
   type: float
   icon: thermostat
+  show: false
 - description: desc
   max: 50
   min: -30
   name: temp_out
   type: float
   icon: thermostat_auto
+  show: true
 - description: desc
   max: 10000
   min: 0
   name: lum_in
   type: float
   icon: lightbulb
+  show: true
 - description: desc
   max: 10000
   min: 0
   name: lum_out
   type: float
   icon: light_mode
+  show: true
 - description: desc
   max: 50
   min: -30
   name: owm_temp_max
   type: float
   icon: looks
+  show: false
 - description: desc
   max: 50
   min: -30
   name: owm_temp_1h
   type: float
   icon: looks_one
+  show: false
 - description: desc
   max: 50
   min: -30
   name: owm_temp_2h
   type: float
   icon: looks_two
+  show: false
 - description: desc
   max: 50
   min: -30
   name: owm_temp_3h
   type: float
   icon: looks_3
+  show: false
 - description: desc
   max: 804
   min: 200
   name: owm_code
   type: int
   icon: integration_instructions
+  show: false
 - description: desc
   max: 50
   min: 0
   name: owm_wind_speed
   type: float
   icon: speed
+  show: true
 - description: desc
   max: 359
   min: 0
   name: owm_wind_heading
   type: float
   icon: directions
+  show: true
 targets:
 - description: desc
   max: 100
