--- a/egs/smartblinds/gui/tsconfig.json
+++ b/egs/smartblinds/gui/tsconfig.json
@@ -19,7 +19,8 @@
     "jsx": "preserve",
     "types": [
       "@emotion/react/types/css-prop"
-    ]
+    ],
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
